--- a/PortfolioAce/Views/Modals/InvestorActionsWindow.xaml
+++ b/PortfolioAce/Views/Modals/InvestorActionsWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PortfolioAce.Views.Modals"
         xmlns:src="clr-namespace:PortfolioAce.Models"
@@ -80,7 +81,16 @@
                                 <TextBlock Text="{Binding FullName}"/>
                             </DataTemplate>
                         </ComboBox.ItemTemplate>
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="SelectionChanged">
+                                <i:InvokeCommandAction Command="{Binding SelectedInvestorChangedCommand}"/>
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
                     </ComboBox>
+                    <WrapPanel Margin="5,0,0,0" Grid.Row="1" Grid.Column="3" Orientation="Horizontal">
+                        <TextBlock Text="Current Position: "/>
+                        <TextBlock Text="{Binding InvestorUnits, StringFormat=N4, UpdateSourceTrigger=PropertyChanged}"/>
+                    </WrapPanel>
                     <DockPanel Name="SubscriptionDockPanel" Grid.Row="3" Grid.ColumnSpan="3">
                         <DockPanel.Style>
                             <Style TargetType="DockPanel" >
