--- a/PortfolioAce/Views/Modals/NavSummaryWindow.xaml
+++ b/PortfolioAce/Views/Modals/NavSummaryWindow.xaml
@@ -164,6 +164,7 @@
                             <DataGridTextColumn Header="Trade Amount" Binding="{Binding TradeAmount, StringFormat=N2}" />
                             <DataGridTextColumn Header="Currency" Binding="{Binding Currency}" />
                             <DataGridTextColumn Header="Investor" Binding="{Binding FundInvestor.Investor.FullName}" />
+                            <DataGridTextColumn Header="Action Date" Binding="{Binding TransactionDate, StringFormat={}{0:dd/MM/yyyy}}" />
                             <DataGridTextColumn Header="Action Settle Date" Binding="{Binding TransactionSettleDate, StringFormat={}{0:dd/MM/yyyy}}" Width="*"/>
                         </DataGrid.Columns>
                         <DataGrid.RowStyle>
