--- a/PortfolioAce/Views/AllFundsView.xaml
+++ b/PortfolioAce/Views/AllFundsView.xaml
@@ -28,13 +28,52 @@
             <RowDefinition Height="117*"/>
             <RowDefinition Height="247*"/>
         </Grid.RowDefinitions>
-        <DockPanel Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Margin="2" Visibility="{Binding ShowWidget, Converter={StaticResource invertVisibilityConverter}}">
+        <Grid.Style>
+        <Style TargetType="Grid" >
+                <Setter Property="Visibility" Value="Collapsed" />
+                <Style.Triggers>
+                    <DataTrigger
+                        Binding="{Binding HasFunds, UpdateSourceTrigger=PropertyChanged}" 
+                        Value="true"
+                        >
+                        <Setter Property="Visibility" Value="Visible" />
+                    </DataTrigger>
+                </Style.Triggers>
+            </Style>
+        </Grid.Style>
+        <DockPanel Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Margin="2">
+            <DockPanel.Style>
+                <Style TargetType="DockPanel" >
+                    <Setter Property="Visibility" Value="Collapsed" />
+                    <Style.Triggers>
+                        <DataTrigger
+                            Binding="{Binding IsInitialised, UpdateSourceTrigger=PropertyChanged}" 
+                            Value="false"
+                            >
+                            <Setter Property="Visibility" Value="Visible" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </DockPanel.Style>
             <StackPanel DockPanel.Dock="Top">
                 <TextBlock TextAlignment="Center" Style="{DynamicResource MaterialDesignBody2TextBlock}">It Appears that you have no funds or your fund is not initialised!</TextBlock>
-                <Button Margin="0,10,0,0" Grid.Row="3" Width="200" Command="{Binding ShowFundInitialisationCommand}" IsEnabled="{Binding IsInitialised, Converter={StaticResource invertBoolConverter}}" Visibility="{Binding ShowWidget, Converter={StaticResource invertVisibilityConverter}}">Initialise Fund</Button>
+                <Button Margin="0,10,0,0" Grid.Row="3" Width="200" Command="{Binding ShowFundInitialisationCommand}" IsEnabled="{Binding IsInitialised, Converter={StaticResource invertBoolConverter}}">Initialise Fund</Button>
             </StackPanel>
         </DockPanel>
-        <DockPanel Grid.Column="1" Grid.Row="0" Margin="2" Visibility="{Binding ShowWidget}">
+        <DockPanel Grid.Column="1" Grid.Row="0" Margin="2">
+            <DockPanel.Style>
+                <Style TargetType="DockPanel" >
+                    <Setter Property="Visibility" Value="Collapsed" />
+                    <Style.Triggers>
+                        <DataTrigger
+                            Binding="{Binding IsInitialised, UpdateSourceTrigger=PropertyChanged}" 
+                            Value="true"
+                            >
+                            <Setter Property="Visibility" Value="Visible" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </DockPanel.Style>
             <StackPanel DockPanel.Dock="Left">
                 <TextBlock Style="{StaticResource MaterialDesignBody1TextBlock}">
                     <TextBlock.Inlines>
@@ -95,8 +134,35 @@
                 </StackPanel>
             </Grid>
         </DockPanel>
-        <Border BorderBrush="Silver" BorderThickness="1" Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Visibility="{Binding ShowWidget}"/>
-        <DockPanel Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Margin="2" Visibility="{Binding ShowWidget}">
+        <Border BorderBrush="Silver" BorderThickness="1" Grid.Column="1" Grid.Row="0" Grid.RowSpan="2">
+            <Border.Style>
+                <Style TargetType="Border" >
+                    <Setter Property="Visibility" Value="Collapsed" />
+                    <Style.Triggers>
+                        <DataTrigger
+                            Binding="{Binding IsInitialised, UpdateSourceTrigger=PropertyChanged}" 
+                            Value="true"
+                            >
+                            <Setter Property="Visibility" Value="Visible" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Border.Style>
+        </Border>
+        <DockPanel Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Margin="2">
+            <DockPanel.Style>
+                <Style TargetType="DockPanel" >
+                    <Setter Property="Visibility" Value="Collapsed" />
+                    <Style.Triggers>
+                        <DataTrigger
+                            Binding="{Binding IsInitialised, UpdateSourceTrigger=PropertyChanged}" 
+                            Value="true"
+                            >
+                            <Setter Property="Visibility" Value="Visible" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </DockPanel.Style>
             <TabControl DockPanel.Dock="Top" Style="{StaticResource MaterialDesignTabControl}" Background="LightGray" >
                 <TabItem Header="Positions">
                     <DataGrid ColumnWidth="*" RowBackground="GhostWhite" AlternatingRowBackground="White" VerticalScrollBarVisibility="Auto" 
@@ -431,7 +497,21 @@
                 </TabItem>
             </TabControl>
         </DockPanel>
-        <Border BorderBrush="Silver" BorderThickness="1" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Visibility="{Binding ShowWidget}"/>
+        <Border BorderBrush="Silver" BorderThickness="1" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2">
+            <Border.Style>
+                <Style TargetType="Border" >
+                    <Setter Property="Visibility" Value="Collapsed" />
+                    <Style.Triggers>
+                        <DataTrigger
+                            Binding="{Binding IsInitialised, UpdateSourceTrigger=PropertyChanged}" 
+                            Value="true"
+                            >
+                            <Setter Property="Visibility" Value="Visible" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Border.Style>
+        </Border>
         <ListBox Name="lbFundList" Background="GhostWhite" Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" HorizontalContentAlignment="Stretch" ItemsSource="{Binding Path=lbFunds}" >
             <ListBox.ItemTemplate>
                 <DataTemplate>
