chart and label/text reformatting

--- a/PortfolioAce/Views/Modals/AddCashTradeWindow.xaml
+++ b/PortfolioAce/Views/Modals/AddCashTradeWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PortfolioAce.Views.Modals"
         mc:Ignorable="d"
-        Title="Add a new Cash Trade" Height="400" Width="410">
+        Title="Create a New Cash Trade" Height="400" Width="410">
     <Border Background="GhostWhite" BorderBrush="Silver" BorderThickness="1" CornerRadius="8,8,3,3" Margin="3">
         <Grid>
             <Grid.ColumnDefinitions>
