--- a/PortfolioAce/Views/Modals/FundMetricsWindow.xaml
+++ b/PortfolioAce/Views/Modals/FundMetricsWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:PortfolioAce.Views.Modals"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         mc:Ignorable="d"
-        Title="Fund Metrics" Height="500" Width="710">
+        Title="{Binding FundName, StringFormat={}{0} Metrics}" Height="500" Width="710">
     <Border Background="GhostWhite" BorderBrush="Silver" BorderThickness="1" CornerRadius="8,8,3,3" Margin="3">
         <Grid Margin="1">
             <Grid.ColumnDefinitions>
@@ -59,7 +59,7 @@
             </lvc:PieChart>
             <lvc:CartesianChart Grid.Row="1" Grid.Column="1" Series="{Binding RowChartData}" Hoverable="True">
                 <lvc:CartesianChart.AxisX>
-                    <lvc:Axis Title="Percentage" LabelFormatter="{Binding Formatter}"/>
+                    <lvc:Axis Title="Performance (%)" LabelFormatter="{Binding Formatter}"/>
                 </lvc:CartesianChart.AxisX>
                 <lvc:CartesianChart.AxisY>
                     <lvc:Axis Title="Security Name" Labels="{Binding RowChartDataLabel}"/>
