--- a/PortfolioAce/Views/Modals/PositionDetailWindow.xaml
+++ b/PortfolioAce/Views/Modals/PositionDetailWindow.xaml
@@ -20,8 +20,8 @@
             <DockPanel Grid.Row="0" Grid.Column="1">
                 <Grid DockPanel.Dock="Top">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
@@ -34,24 +34,27 @@
                         <RowDefinition/>
                         <RowDefinition/>
                         <RowDefinition/>
+                        <RowDefinition/>
                     </Grid.RowDefinitions>
                     <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"  Style="{StaticResource MaterialDesignBody2TextBlock}" HorizontalAlignment="Center" Text="{Binding Title}" FontWeight="Bold"/>
                     <Label Content="Quantity:" Grid.Row="1" FontWeight="Bold"/>
-                    <Label Content="{Binding TargetPosition.Position.NetQuantity, StringFormat=N2}" Grid.Row="1" Grid.Column="1"/>
+                    <TextBlock Text="{Binding TargetPosition.Position.NetQuantity, StringFormat=N2}" Grid.Row="1" Grid.Column="1" Margin="5,5,0,0"/>
                     <Label Content="Average Cost:" Grid.Row="2" FontWeight="Bold"/>
-                    <Label Content="{Binding TargetPosition.Position.AverageCost, StringFormat=N2}" Grid.Row="2" Grid.Column="1"/>
-                    <Label Content="Unrealised Pnl:" Grid.Row="3" FontWeight="Bold"/>
-                    <Label Content="{Binding TargetPosition.UnrealisedPnl, StringFormat=N2, Mode=OneWay}" Grid.Row="3" Grid.Column="1"/>
-                    <Label Content="Realised Pnl:" Grid.Row="4" FontWeight="Bold"/>
-                    <Label Content="{Binding TargetPosition.Position.RealisedPnL, StringFormat=N2, Mode=OneWay}" Grid.Row="4" Grid.Column="1"/>
+                    <TextBlock Text="{Binding TargetPosition.Position.AverageCost, StringFormat=N2}" Grid.Row="2" Grid.Column="1" Margin="5,5,0,0"/>
+                    <Label Content="Unrealised Pnl (Local):" Grid.Row="3" FontWeight="Bold"/>
+                    <TextBlock Text="{Binding TargetPosition.UnrealisedPnl, StringFormat=N2, Mode=OneWay}" Grid.Row="3" Grid.Column="1" Margin="5,5,0,0"/>
+                    <Label Content="Realised Pnl (Local):" Grid.Row="4" FontWeight="Bold"/>
+                    <TextBlock Text="{Binding TargetPosition.Position.RealisedPnL, StringFormat=N2, Mode=OneWay}" Grid.Row="4" Grid.Column="1" Margin="5,5,0,0"/>
                     <Label Content="FX Rate:" Grid.Row="5" FontWeight="Bold"/>
-                    <Label Content="{Binding TargetPosition.fxRate, Mode=OneWay, StringFormat=N2}" Grid.Row="5" Grid.Column="1"/>
-                    <Label Content="Base Market Value:" Grid.Row="6" FontWeight="Bold"/>
-                    <Label Content="{Binding TargetPosition.MarketValueBase, StringFormat=N2, Mode=OneWay}" Grid.Row="6" Grid.Column="1"/>
-                    <Label Content="Custodian:" Grid.Row="7" FontWeight="Bold"/>
-                    <Label Content="{Binding TargetPosition.Position.Custodian.Name, Mode=OneWay}" Grid.Row="7" Grid.Column="1"/>
-                    <Label Content="Fund:" Grid.Row="8" FontWeight="Bold"/>
-                    <Label Content="{Binding FundName, Mode=OneWay}" Grid.Row="8" Grid.Column="1"/>
+                    <TextBlock Text="{Binding TargetPosition.fxRate, Mode=OneWay, StringFormat=N4}" Grid.Row="5" Grid.Column="1" Margin="5,5,0,0"/>
+                    <Label Content="Market Value (Local):" Grid.Row="6" FontWeight="Bold"/>
+                    <TextBlock Text="{Binding TargetPosition.MarketValueLocal, StringFormat=N2, Mode=OneWay}" Grid.Row="6" Grid.Column="1" Margin="5,5,0,0"/>
+                    <Label Content="Currency:" Grid.Row="7" FontWeight="Bold"/>
+                    <TextBlock Text="{Binding TargetPosition.Position.Security.Currency.Symbol, Mode=OneWay}" Grid.Row="7" Grid.Column="1" Margin="5,5,0,0"/>
+                    <Label Content="Custodian:" Grid.Row="8" FontWeight="Bold"/>
+                    <TextBlock Text="{Binding TargetPosition.Position.Custodian.Name, Mode=OneWay}" Grid.Row="8" Grid.Column="1" Margin="5,5,0,0"/>
+                    <Label Content="Fund:" Grid.Row="9" FontWeight="Bold"/>
+                    <TextBlock Text="{Binding FundName, Mode=OneWay}" Grid.Row="9" Grid.Column="1" Margin="5,5,0,0"/>
                 </Grid>
             </DockPanel>
             <DockPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="1">
@@ -61,7 +64,7 @@
                       AutoGenerateColumns="False" IsReadOnly="True" >
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Date" Binding="{Binding date, StringFormat={}{0:dd/MM/yyyy}}" Width="SizeToCells"/>
-                        <DataGridTextColumn Header="Quantity" Binding="{Binding quantity}"  Width="SizeToHeader"/>
+                        <DataGridTextColumn Header="Quantity" Binding="{Binding quantity, StringFormat=N2}"  Width="SizeToHeader"/>
                         <DataGridTextColumn Header="Cost Price" Binding="{Binding price, StringFormat=N2}" Width="SizeToHeader"/>
                     </DataGrid.Columns>
                 </DataGrid>
